--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,15 @@
         android:layout_height="wrap_content"
         android:background="@color/chineseBlack"
         app:elevation="8dp"
-        app:itemRippleColor="@color/chineseBlack"
         app:itemActiveIndicatorStyle="@dimen/_1font_mdp"
         app:itemIconTint="@color/color_bottom_nav"
+        app:itemRippleColor="@color/chineseBlack"
         app:itemTextColor="@color/color_bottom_nav"
         app:labelVisibilityMode="unlabeled"
 
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_main" />
 
 
